src/css/pages-css/home-css/newsletter.css
.newsletter-container {
  width: 100%;
  height: 50vh;
  padding: 75px 0;
  display: flex;
  background-color: rgb(235, 235, 235);
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.logo-newsletter {
  width: 100px;
}

.big-text {
  font-size: 1.5rem;
  font-weight: bold;
  letter-spacing: 2px;
  width: 90%;
  text-align: center;
}

.little-text {
  width: 80%;
  font-size: 1.2rem;
  text-align: center;
}

.email-container {
  width: 85%;
  height: auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

#email-input {
  padding: 12px 0 12px 20px;
  border: none;
  box-sizing: border-box;
  font-size: 1.1rem;
  font-family: "Titillium Web", sans-serif;
  outline: none;
  width: 70%;
}

#submit-btn-news {
  font-size: 1.1rem;
  padding: 12px;
  width: 30%;
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  outline: none;
  box-sizing: border-box;
  background-color: rgb(231, 46, 46);
  color: white;
  font-family: "Titillium Web", sans-serif;
}

/** desktop view **/

@media only screen and (min-width: 720px) {
  .newsletter-container {
    padding: 100px 0;
  }

  .logo-newsletter {
    width: 150px;
  }

  .big-text {
    font-size: 1.7rem;
  }

  .little-text {
    font-size: 1.3rem;
  }

  .email-container {
    width: 65%;
  }

  #email-input {
    width: 80%;
  }

  #submit-btn-news {
    width: 20%;
  }
}

